# claude-translator

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-16-description-translator.md  2026-04-19-architecture-optimization-codex-runbook.md  2026-04-19-review-fixes.md
docs/superpowers/specs/: 2026-04-16-description-translator-design.md  2026-04-19-architecture-optimization-design.md  2026-04-19-review-fixes-design.md
src/claude_translator/: __init__.py  __main__.py  cli.py  errors.py
src/claude_translator/clients/: __init__.py  async_fake.py  async_openai.py  base.py  fake.py  openai_compat.py
src/claude_translator/config/: __init__.py  defaults.py  loaders.py  models.py
src/claude_translator/core/: canonical.py  discovery.py  frontmatter.py  injector.py  migration.py  models.py  pipeline.py  report.py  translator.py
src/claude_translator/lang/: cjk.py  cleaner.py  detect.py  prompts.py
src/claude_translator/storage/: _io.py  cache.py  overrides.py  paths.py
src/claude_translator/utils/: paths.py
tests/: async_helpers.py  conftest.py  test_async_clients.py  test_async_translator.py  test_cache.py  test_canonical.py  test_cjk.py  test_cleaner.py  test_cli.py  test_cli_concurrency.py  test_clients.py  test_clients_failfast.py  test_config.py  test_detect.py  test_discovery.py  test_errors.py  test_frontmatter.py  test_frontmatter_logging.py  test_injector.py  test_injector_whitelist.py  test_migration.py  test_models.py  test_overrides.py  test_performance.py  test_pipeline.py  test_pipeline_async.py  test_pipeline_no_dead_code.py  test_prompts.py  test_prompts_xml.py  test_report_empty.py  test_storage_io.py  test_storage_paths.py  test_translator.py  test_utils_paths.py
